# hist_kalman_mot

./: CMakeLists.txt  package.xml
include/: mot.h  mot_ros.h  object_in_view.h  object_tracking_result.h  target_in_track.h
src/: mot.cpp  mot_ros.cpp
